[package]
name = "_003_rust_web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "connect_geth"
path = "src/connect_geth.rs"

[dependencies]
tokio = {version = "1", features = ["full"]}
web3 = "0.19.0"
